tests/unit/default/syntax-error/123-add-fk-table.x.t
---- IN ----
+FK%child|
---- OUT ----
---- ERR ----
syntax: expected <columns-ref> after `+FK%child` near `|` at position 9 - at line 1
---- EXIT ----
1
